[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "i18n-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "2"
paste = {path="./paste"}
#anyhow = "1.0.61"
num_cpus = "1.13.1"
once_cell = "1.13.0"
err = { version = "0.0.5", package = "rmw_err" }
rocksdb = { version="0.19.0", features = [
  "zstd", "lz4"
], default-features = false }
librocksdb-sys = "0.8.0+7.4.4"
anyhow = "1.0.61"
xxhash-rust = {version="0.8.5",features=["xxh3"]}

[dependencies.napi]
path = "./napi-rs/crates/napi"
features = ["compat-mode","napi8","async","anyhow","experimental"]
default-features = false
#version="2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
